# website

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  GPT.md  build.rs  goamet_schema.sql  ontwerp_chat.md  package.json  tailwind.config.cjs
assets/css/: chat.css  (+3 more)
migrations/: 001_add_lat_lon_indexes.sql  002_add_activity_lat_lon_and_participants.sql  003_backfill_activity_participants_and_drop_participants_column.sql  004_activity_signup_commands.sql  005_activity_waitlist_commands.sql  006_dev_dummy_sp_triggers.sql  007_add_activities_is_owner.sql  008_add_primary_organizer_columns.sql  009_rename_is_owner_to_can_manage_activity.sql  010_fix_activity_views.sql  011_add_promotion_media.sql  012_add_promotion_units.sql  013_migrate_promotion_media_to_units.sql  014_seed_activity_participants_ctas.sql  015_activity_participants_cta_solid_colors.sql  016_activity_participants_cta_unified_blue.sql  017_add_activity_settings.sql  018_seed_activity_participants_info.sql  019_friendship_commands.sql  020_add_chat_snapshot_tables.sql  021_expand_chat_conversations_ui_fields.sql
scripts/: activitydb-chat-testdata-abbas.sql  activitydb-chat-testdata.sql  build-css.sh  cargo-fast.sh  dev-force-activity-full.sh  dev-incognito.sh  dev-seed-chat-cache.sh  dev-seed-chat-conversations.sql  dev-set-activity-capacity.sh  dev-set-waitlist-enabled.sh  sqlx-baseline.sh
src/: lib.rs  main.rs
templates/: activities.html  activity.html  activity_summary.html  chat_detail.html  chats.html  discovery.html  error.html  layout.html  login.html  user.html  user_summary.html
(+53 files in other folders)
