[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
askama_axum = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
tower-http = { version = "0.6.8", features = ["fs", "catch-panic", "set-header"] }
tower = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
http = "1"
uuid = { version = "1", features = ["v4", "serde"] }
cookie = { version = "0.18", features = ["secure"] }
bytes = "1"
base64 = "0.22"
